# SpeecherinoProjectino

./: .gitignore
Etap1/Data/Text/: Text_1.txt
Etap1/Sentimento/: herbert.py  opinie-nieoczywiste.csv  opinie-oczywiste.csv  testy.py  wyniki_opinie-nieoczywiste.csv  wyniki_opinie-oczywiste.csv
Etap1/TTS/: api-test.py
Etap1/TTS/Results/: tts_results.csv
Etap1/Transcriptions/: Audio_1_whisper.txt
Etap1/Whisper/: analyze.py  results_with_metrics.csv  results_with_metrics2.csv  whisper-transcribe.py
Etap1/Whisper/results/: analysis_20251022_201659.txt  analysis_20251022_202058.txt  analysis_20251022_202948.txt  analysis_20251022_203409.txt  analysis_20251022_203534.txt
Whisper/: batch-transcribe-eleven.py  batch-transcribe.py  final_analyze.py  whisper-transcribe.py  wspomnienia1.m4a
Whisper/transcriptions/: wspomnienia1_whisper.txt
backend/: .env.example  main.py  pyproject.toml  requirements.txt  run.bat  run.sh  setup.py
backend/config/: default_config.json
backend/src/: __init__.py  app_controller.py  audio_recorder.py  config_manager.py  conversation_store.py  dialogs.py  duck_widget.py  hotkey_manager.py  llm_module.py  main_window.py  sentiment_analyzer.py  stt_module.py  tts_module.py
